feat: docker hw 3